--- a/templates/index.html
+++ b/templates/index.html
@@ -1,149 +1,217 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <style>
-    /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
-    .row.content {height: 1500px}
-    
-    /* Set gray background color and 100% height */
-    .sidenav {
-      background-color: #f1f1f1;
-      height: 100%;
-    }
-    
-    /* Set black background color, white text and some padding */
-    footer {
-      background-color: #555;
-      color: white;
-      padding: 15px;
-    }
-    
-    /* On small screens, set height to 'auto' for sidenav and grid */
-    @media screen and (max-width: 767px) {
-      .sidenav {
-        height: auto;
-        padding: 15px;
-      }
-      .row.content {height: auto;}
-    }
-  </style>
-</head>
-<body>
+{% extends "layout.html" %}
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Logo</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<div class="container-fluid">
-  <div class="row content">
-    <div class="col-sm-3 sidenav">
-      <h4>John's Blog</h4>
-      <ul class="nav nav-pills nav-stacked">
-        <li class="active"><a href="#section1">Home</a></li>
-        <li><a href="#section2">Friends</a></li>
-        <li><a href="#section3">Family</a></li>
-        <li><a href="#section3">Photos</a></li>
-      </ul><br>
-      <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search Blog..">
-        <span class="input-group-btn">
-          <button class="btn btn-default" type="button">
-            <span class="glyphicon glyphicon-search"></span>
+{% block content %}
+  <!--
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="panel panel-default text-left">
+        <div class="panel-body">
+          <p contenteditable="true">Status: Feeling Blue</p>
+          <button type="button" class="btn btn-default btn-sm">
+            <span class="glyphicon glyphicon-thumbs-up"></span> Like
           </button>
-        </span>
-      </div>
-    </div>
-
-    <div class="col-sm-9">
-      <h4><small>RECENT POSTS</small></h4>
-      <hr>
-      <h2>I Love Food</h2>
-      <h5><span class="glyphicon glyphicon-time"></span> Post by Jane Dane, Sep 27, 2015.</h5>
-      <h5><span class="label label-danger">Food</span> <span class="label label-primary">Ipsum</span></h5><br>
-      <p>Food is my passion. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <br><br>
-      
-      <h4><small>RECENT POSTS</small></h4>
-      <hr>
-      <h2>Officially Blogging</h2>
-      <h5><span class="glyphicon glyphicon-time"></span> Post by John Doe, Sep 24, 2015.</h5>
-      <h5><span class="label label-success">Lorem</span></h5><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <hr>
-
-      <h4>Leave a Comment:</h4>
-      <form role="form">
-        <div class="form-group">
-          <textarea class="form-control" rows="3" required></textarea>
-        </div>
-        <button type="submit" class="btn btn-success">Submit</button>
-      </form>
-      <br><br>
-      
-      <p><span class="badge">2</span> Comments:</p><br>
-      
-      <div class="row">
-        <div class="col-sm-2 text-center">
-          <img src="bandmember.jpg" class="img-circle" height="65" width="65" alt="Avatar">
-        </div>
-        <div class="col-sm-10">
-          <h4>Anja <small>Sep 29, 2015, 9:12 PM</small></h4>
-          <p>Keep up the GREAT work! I am cheering for you!! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <br>
-        </div>
-        <div class="col-sm-2 text-center">
-          <img src="bird.jpg" class="img-circle" height="65" width="65" alt="Avatar">
-        </div>
-        <div class="col-sm-10">
-          <h4>John Row <small>Sep 25, 2015, 8:25 PM</small></h4>
-          <p>I am so happy for you man! Finally. I am looking forward to read about your trendy life. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          <br>
-          <p><span class="badge">1</span> Comment:</p><br>
-          <div class="row">
-            <div class="col-sm-2 text-center">
-              <img src="bird.jpg" class="img-circle" height="65" width="65" alt="Avatar">
-            </div>
-            <div class="col-xs-10">
-              <h4>Nested Bro <small>Sep 25, 2015, 8:28 PM</small></h4>
-              <p>Me too! WOW!</p>
-              <br>
-            </div>
-          </div>
         </div>
       </div>
     </div>
   </div>
+     -->
+<script>
+function doalert(checkboxElem) {
+  if (checkboxElem.checked) {
+    alert("checked")
+  } else {
+    alert("notchecked")
+  }
+}
+</script>
+  
+  <div class="row">
+    <div class="col-md-12">
+      <div class="well">
+       <h3>Availability for</h3>
+      </div>
+    </div>    
+  </div>
+  <div class="row">
+    <div class="col-md-1">
+      <p>Sun</p>
+    </div>
+    <div class="col-md-2">
+      <p>Mon</p>
+    </div>
+    <div class="col-md-2">
+      <p>Tue</p>
+    </div>
+    <div class="col-md-2">
+      <p>Wed</p>
+    </div>
+    <div class="col-md-2">
+      <p>Thu</p>
+    </div>
+    <div class="col-md-2">
+      <p>Fri</p>
+    </div>
+    <div class="col-md-1">
+      <p>Sat</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-1">
+      <p>1</p>
+    </div>
+    <div class="col-md-2">
+      <p>2</p>
+    </div>
+    <div class="col-md-2">
+      <p>3</p>
+    </div>
+    <div class="col-md-2">
+      <p>4</p>
+    </div>
+    <div class="col-md-2">
+      <p>5</p>
+    </div>
+    <div class="col-md-2">
+      <p>6</p>
+    </div>
+    <div class="col-md-1">
+      <p>7</p>
+    </div>
+  </div>
+   <div class="row">
+    <div class="col-md-1">
+      <p>8</p>
+    </div>
+    <div class="col-md-2">
+      <p>9</p>
+    </div>
+    <div class="col-md-2">
+      <p>10</p>
+    </div>
+    <div class="col-md-2">
+      <p>11</p>
+    </div>
+    <div class="col-md-2">
+      <p>12</p>
+    </div>
+    <div class="col-md-2">
+      <p>13</p>
+    </div>
+    <div class="col-md-1">
+      <p>14</p>
+    </div>
+  </div>
+   <div class="row">
+    <div class="col-md-1">
+      <p>15</p>
+    </div>
+    <div class="col-md-2">
+      <p>16</p>
+    </div>
+    <div class="col-md-2">
+      <p>17</p>
+    </div>
+    <div class="col-md-2">
+      <p>18</p>
+    </div>
+    <div class="col-md-2">
+      <p>19</p>
+    </div>
+    <div class="col-md-2">
+      <p>20</p>
+    </div>
+    <div class="col-md-1">
+      <p>21</p>
+    </div>
+  </div>
+   <div class="row">
+    <div class="col-md-1">
+      <p>22</p>
+    </div>
+    <div class="col-md-2">
+      <p>23</p>
+    </div>
+    <div class="col-md-2">
+      <p>24</p>
+    </div>
+    <div class="col-md-2">
+      <p>25</p>
+    </div>
+    <div class="col-md-2">
+      <p>26</p>
+    </div>
+    <div class="col-md-2">
+      <p>27</p>
+    </div>
+    <div class="col-md-1">
+      <p>28</p>
+    </div>
+  </div>
+   <div class="row">
+    <div class="col-md-1">
+      <p>29</p>
+    </div>
+    <div class="col-md-2">
+      <p>30</p>
+    </div>
+    
+  </div>
+ 
+  <!--
+  <div class="row">
+    <div class="col-sm-3">
+      <div class="well">
+       <p>John</p>
+       <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+      </div>
+    </div>
+    <div class="col-sm-9">
+      <div class="well">
+        <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-3">
+      <div class="well">
+       <p>Bo</p>
+       <img src="bandmember.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+      </div>
+    </div>
+    <div class="col-sm-9">
+      <div class="well">
+        <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-3">
+      <div class="well">
+       <p>Jane</p>
+       <img src="bandmember.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+      </div>
+    </div>
+    <div class="col-sm-9">
+      <div class="well">
+        <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-3">
+      <div class="well">
+       <p>Anja</p>
+       <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
+      </div>
+    </div>
+    <div class="col-sm-9">
+      <div class="well">
+        <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
+      </div>
+    </div>
+  </div>-->
 </div>
 
-<footer class="container-fluid">
-  <p>Footer Text</p>
-</footer>
-
-</body>
-</html>
+{% endblock %}
+    
+    
