moved landing out

--- a/templates/index.html
+++ b/templates/index.html
@@ -77,7 +77,7 @@
                     <input class="form-control" type="password" id="password" name="pw" placeholder="Password" />
 
                     <br>
-                    <p><input class="intro-text btn" type="submit" value="login" name="submit"/></p>
+                    <p><input href="/" class="intro-text btn" type="submit" value="login" name="submit"/></p>
                 
                 </form>
                 <a href="#about" class="page-scroll footer">What is Feed-a-friend?</a>
