landing connects to dashboard

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,12 +72,12 @@
         <div class="container">
             <div class="intro-text">
                 <h1>Feed-a-Friend</h1>
-                <form method="post" action="/">
+                <form method="POST" action="/dashboard">
                     <p><input class="form-control" type="text" id="username" name="username" placeholder="Username"></p>
                     <input class="form-control" type="password" id="password" name="pw" placeholder="Password" />
 
                     <br>
-                    <p><input href="/" class="intro-text btn" type="submit" value="login" name="submit"/></p>
+                    <p><input class="intro-text btn" type="submit" value="login" name="submit"/></p>
                 
                 </form>
                 <a href="#about" class="page-scroll footer">What is Feed-a-friend?</a>
