--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -120,7 +120,7 @@
     <div class="col-sm-3 well">
       <div class="well">
         <p><a href="#">My Profile</a></p>
-        <img src="/static/img/bird.jpg" class="img-circle" height="65" width="65" alt="Avatar">
+        <img src="static/images/bird.jpg" class="img-circle" height="65" width="65" alt="Avatar">
       </div>
       <div class="well">
         <p><a href="#">Interests</a></p>
