--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -91,11 +91,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Feed A Friend</a>
+      <a class="navbar-brand" href="/dashboard">Feed A Friend</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="/dashboard">Home</a></li>
         <li><a href="#">Messages</a></li>
       </ul>
       <form class="navbar-form navbar-right" role="search">
