--- a/templates/newsFeed.html
+++ b/templates/newsFeed.html
@@ -1,11 +1,13 @@
 {% extends "dashboard.html" %}
 
 {% block content %}
-  
+
+{% if userT == "g" %}
+<!-- giver -->
   <div class="row">
     <div class="col-md-12">
       <div class="well">
-       <h3>Availability for</h3>
+       <h3>Availability for </h3>
       </div>
     </div>    
   </div>
@@ -188,5 +190,9 @@
     </div>
   </div>-->
 </div>
-    
+
+{% else %}
+<!-- taker -->
+{% endif %}
+
 {% endblock %}
