--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -114,30 +114,54 @@
     </div>
   </div>
 </nav>
-  
 <div class="container text-center">
   <div class="row">
     <div class="col-sm-3 well">
-      <div class="well">
-        <p><a href="#">My Profile</a></p>
+
+<div class="panel-group">
+<div class="panel panel-default">
+<div class="panel-heading">
+  
+      
+        <p class="panel-title"><a data-toggle="collapse" href="#collapse1">My Profile</a></p>
         <img src="static/images/bird.jpg" class="img-circle" height="65" width="65" alt="Avatar">
-      </div>
+     
+      
+</div>
+<div id="collapse1" class="panel-collapse collapse">
+    <div class="panel-body">Name</div>
+     <div class="panel-body">username</div>
+      <div class="panel-body">Email</div>
+    <div class="panel-footer">PF</div>
+</div>
+</div>
+</div>
       <div class="well">
         <p><a href="#">Interests</a></p>
         
+        {% if userT == "g" %}
         <table align="center">
           <td>Give</td>
           <td><label class="switch">
-                syn<input type="checkbox" name="checkfield" id="g0-01" onchange="doalert(this)">
+                syn<input type="checkbox" name="checkfield" id="g0-01" onchange="doalert(this)" unchecked>
                 <div class="slider round"></div>
               </label></td>
           <td>Take</td>
         </table>
-       
+       {% else %}
+       <table align="center">
+          <td>Give</td>
+          <td><label class="switch">
+                syn<input type="checkbox" name="checkfield" id="g0-01" onchange="doalert(this)" checked>
+                <div class="slider round"></div>
+              </label></td>
+          <td>Take</td>
+        </table>
+       {% endif %}
 <script>
 function doalert(checkboxElem) {
   if (checkboxElem.checked) {
-alert("checked")
+    alert("checked")
   } else {
     alert("notchecked")
   }
