--- a/static/css/agency.css
+++ b/static/css/agency.css
@@ -593,7 +593,7 @@ aside.clients img {
 }
 section#contact {
   background-color: #222222;
-  background-image: url('../img/header-bg.jpg');
+  background-image: url('../img/map-image.png');
   background-position: center;
   background-repeat: no-repeat;
 }
