--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <title>NomNomNom</title>
+   <link rel="shortcut icon" href="../static/img/header-bg.jpg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
