login and signup working without hashing

--- a/templates/login.html
+++ b/templates/login.html
@@ -38,7 +38,7 @@
                 <h1>Feed-a-Friend</h1>
                 <form method="post" action="/dashboard">
                     <p><input class="form-control" type="text" id="username" name="username" placeholder="Username"></p>
-                    <input class="form-control" type="password" id="password" name="pw" placeholder="Password" />
+                    <input class="form-control" type="password" id="password" name="password" placeholder="Password" />
 
                     <br>
                     <p><input class="intro-text btn" type="submit" value="login" name="submit"/></p>
