still working on schedule

--- a/templates/newsFeed.html
+++ b/templates/newsFeed.html
@@ -14,10 +14,10 @@
               <tbody align="center">
               <tr align="justify">
                 <td><label>Breakfast</label></td>
-                <td><label><input type="checkbox" name="7am"/>7-8</label>
-                  <label><input type="checkbox" name="8am"/>8-9</label>
-                  <label><input type="checkbox" name="9am"/>9-10</label>
-                  <label><input type="checkbox" name="10am"/>10-11</label></td>
+                <td><label><input type="checkbox" name="7am"/>7AM - 8AM</label>
+                  <label><input type="checkbox" name="8am"/>8AM - 9AM</label>
+                  <label><input type="checkbox" name="9am"/>9AM - 10AM</label>
+                  <label><input type="checkbox" name="10am"/>10AM - 11AM</label></td>
                 <!--<td>Lunch</td>
                 <td>Dinner</td>-->
               </tr>
@@ -26,25 +26,25 @@
                   
                 <td><label>Lunch</label></td>
                 <td>
-                  <label><input type="checkbox" name="11am"/>11-12</label>
-                  <label><input type="checkbox" name="12pm"/>12-1</label>
-                  <label><input type="checkbox" name="1pm"/>1-2</label>
-                  <label><input type="checkbox" name="2pm"/>2-3</label>
-                  <label><input type="checkbox" name="3pm"/>3-4</label>
-                  <label><input type="checkbox" name="4pm"/>4-5</label>
+                  <label><input type="checkbox" name="11am"/>11AM - 12PM</label>
+                  <label><input type="checkbox" name="12pm"/>12PM - 1PM</label>
+                  <label><input type="checkbox" name="1pm"/>1PM - 2PM</label>
+                  <label><input type="checkbox" name="2pm"/>2PM - 3PM</label>
+                  <label><input type="checkbox" name="3pm"/>3PM - 4PM</label>
+                  <label><input type="checkbox" name="4pm"/>4PM - 5PM</label>
                   </td>
                   </tr>
                 <tr align="justify">
                     <td><label>Dinner</label></td>
                     <td>
-                  <label><input type="checkbox" name="5pm"/>5-6</label>
-                  <label><input type="checkbox" name="6pm"/>6-7</label>
-                  <label><input type="checkbox" name="7pm"/>7-8</label>
-                  <label><input type="checkbox" name="8pm"/>8-9</label>
-                  <label><input type="checkbox" name="9pm"/>9-10</label>
-                  <label><input type="checkbox" name="10pm"/>10-11</label>
-                  <label><input type="checkbox" name="11pm"/>11-12</label>
-                  <label><input type="checkbox" name="12am"/>12-1</label>
+                  <label><input type="checkbox" name="5pm"/>5PM - 6PM</label>
+                  <label><input type="checkbox" name="6pm"/>6PM - 7PM</label>
+                  <label><input type="checkbox" name="7pm"/>7PM - 8PM</label>
+                  <label><input type="checkbox" name="8pm"/>8PM - 9PM</label>
+                  <label><input type="checkbox" name="9pm"/>9PM - 10PM</label>
+                  <label><input type="checkbox" name="10pm"/>10PM - 11PM</label>
+                  <label><input type="checkbox" name="11pm"/>11PM - 12AM</label>
+                  <label><input type="checkbox" name="12am"/>12AM - 1AM</label>
                   </td>
                 
               </tr>
