trying to revert

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -130,9 +130,10 @@
       
 </div>
 <div id="collapse1" class="panel-collapse collapse">
-    <div class="panel-body">Name</div>
-     <div class="panel-body">username</div>
-      <div class="panel-body">Email</div>
+    {% for profile in profile %}
+    <div class="panel-body">{{profile['name']}}</div>
+     <div class="panel-body">{{username}}</div>
+      <div class="panel-body">{{profile['email']}}</div>
     <div class="panel-footer">Save changes button</div>
 </div>
 </div>
