got login and signup to work correctly again

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -130,10 +130,9 @@
       
 </div>
 <div id="collapse1" class="panel-collapse collapse">
-    {% for profile in profile %}
-    <div class="panel-body">{{profile['name']}}</div>
-     <div class="panel-body">{{username}}</div>
-      <div class="panel-body">{{profile['email']}}</div>
+    <div class="panel-body">Name</div>
+     <div class="panel-body">Username</div>
+      <div class="panel-body">Email</div>
     <div class="panel-footer">Save changes button</div>
 </div>
 </div>
