--- a/templates/signup.html
+++ b/templates/signup.html
@@ -41,7 +41,7 @@
                     <p><input class="form-control" type="password" id="password" name="password" placeholder="Password"></p> 
                     <p><input class="form-control" type="text" id="name" name="name" placeholder="Name"></p>
                     <p><input class="form-control" type="email" id="email" name="email" placeholder="Email"></p>
-                    <p><select name="usertype" id="usertype"></p>
+                    <p><select name="usertype" id="usertype" placeholder="User Type"></p>
                         <option value="g">Giver</option>
                         <option value="r">Receiver</option>
                     </select>
