--- a/templates/newsFeed.html
+++ b/templates/newsFeed.html
@@ -51,7 +51,7 @@
 					    <tr>
 					      <td></td>
 					      <td>
-					        <input type="submit" value="Submit Availability" />
+					        <input type="button" value="Submit Availability" />
 					      </td>
 					      <td></td>
 					     </tr>
