--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -92,11 +92,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/dashboard">Feed A Friend</a>
+      <a class="navbar-brand" href="#">Feed A Friend</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="/dashboard">Home</a></li>
+        <li class="active"><a href="#">Home</a></li>
         <li><a href="#">Messages</a></li>
       </ul>
       <form class="navbar-form navbar-right" role="search">
@@ -144,7 +144,7 @@
         <table align="center">
           <td><a href="#">Give</a></td>
           <td><label class="switch">
-                syn<input type="checkbox" name="checkfield" id="g0-01" onchange="doalert(this)" unchecked>
+                syn<input type="checkbox" name="checkfield" id="g0-01" unchecked>
                 <div class="slider round"></div>
               </label></td>
           <td><a href="#">Take</a></td>
@@ -153,7 +153,7 @@
        <table align="center">
           <td><a href="#">Give</a></td>
           <td><label class="switch">
-                syn<input type="checkbox" name="checkfield" id="g0-01" onchange="doalert(this)" checked>
+                syn<input type="checkbox" name="checkfield" id="g0-01"  checked>
                 <div class="slider round"></div>
               </label></td>
           <td><a href="#">Take</a></td>
@@ -202,10 +202,9 @@ function doalert(checkboxElem) {
     
     <div class="col-sm-2 well">
       <div class="thumbnail">
-        <p>Upcoming Events:</p>
-        <img src="paris.jpg" alt="Paris" width="400" height="300">
-        <p><strong>Paris</strong></p>
-        <p>Fri. 27 November 2015</p>
+        <p>Notifications</p>
+        <p><strong>Welcome</strong></p>
+        
         <button class="btn btn-primary">Info</button>
       </div>
       <div class="well">
