signup error checks done

--- a/templates/login.html
+++ b/templates/login.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="intro-text">
                 <h1>Feed-a-Friend</h1>
-                <form method="post" action="/dashboard">
+                <form method="post" action="/login">
                     <p><input class="form-control" type="text" id="username" name="username" placeholder="Username"></p>
                     <input class="form-control" type="password" id="password" name="password" placeholder="Password" />
 
