--- a/templates/signup.html
+++ b/templates/signup.html
@@ -39,6 +39,7 @@
                 <form method="post" action="/signup">
                     <p><input class="form-control" type="text" id="username" name="username" placeholder="Username"></p>
                     <p><input class="form-control" type="password" id="password" name="password" placeholder="Password"></p> 
+                    <p><input class="form-control" type="password" id="confirmpassword" name="confirmpassword" placeholder="Confirm Password"></p>
                     <p><input class="form-control" type="text" id="name" name="name" placeholder="Name"></p>
                     <p><input class="form-control" type="email" id="email" name="email" placeholder="Email"></p>
                     <p><select name="usertype" id="usertype" placeholder="User Type"></p>
