--- a/templates/signup.html
+++ b/templates/signup.html
@@ -68,7 +68,7 @@
                     </div>
                     {% endif %}
                     
-                    <p><select class="dropdown-toggle.btn-primary" name="usertype" id="usertype" placeholder="User Type"></p>
+                    <p><select class="form-dropdown" name="usertype" id="usertype" placeholder="User Type"></p>
                         <option value="g">Giver</option>
                         <option value="r">Receiver</option>
                     </select>
