added table, submitting and displaying availability done

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -69,8 +69,8 @@
                     {% endif %}
                     
                     <p><select class="dropdown-toggle.btn-primary" name="usertype" id="usertype" placeholder="User Type"></p>
-                        <option value="g">Giver</option>
-                        <option value="r">Receiver</option>
+                        <option value="g">User Type: Giver</option>
+                        <option value="r">User Type: Receiver</option>
                     </select>
                    
                     <br>
