--- a/templates/newsFeed.html
+++ b/templates/newsFeed.html
@@ -2,257 +2,60 @@
 
 {% block content %}
 
-{% if userT == "g" %}
+{% if userT == [['g']] %}
 <!-- giver -->
-  <form method="POST" action="#" >
+
       <div class="row">
         
         <div class="col-md-12">
         <div class="well">  
-            <h3>Available today?</h3>
+            <h4>Your Availability</h4>
+            <table style="width:100%">
+              <tbody align="center">
+                {% for breakfast in breakfast %}
+                    <tr align="center"><td>Breakfast: {{breakfast['starttime']}} - {{breakfast['endtime']}}</td></tr>
+                {% endfor %}
+                
+                {% for lunch in lunch %}
+                    <tr align="center"><td>Lunch: {{lunch['starttime']}} - {{lunch['endtime']}}</td></tr>
+                {% endfor %}
+                
+                {% for dinner in dinner %}
+                    <tr align="center"><td>Dinner: {{dinner['starttime']}} - {{dinner['endtime']}}</td></tr>
+                {% endfor %}
+                <tr align="center"><td><a href="/editavailability">Edit Available</a> </td></tr>
+					   </tbody>
+					</table>
+
+          </div>
+        </div>    
+      </div>
+</div>
+
+{% elif userT == [['r']] %}
+<!-- taker -->
+
+      <div class="row">
+        
+        <div class="col-md-12">
+        <div class="well">  
+<!-- Search bar for givers -->
+            <h3>Search for Givers</h3>
             <table style="width:100%">
               <tbody align="center">
               <tr align="justify">
-                <td><label>Breakfast</label></td>
-                <td><label><input type="checkbox" name="7am"/>7AM - 8AM</label>
-                  <label><input type="checkbox" name="8am"/>8AM - 9AM</label>
-                  <label><input type="checkbox" name="9am"/>9AM - 10AM</label>
-                  <label><input type="checkbox" name="10am"/>10AM - 11AM</label></td>
-                <!--<td>Lunch</td>
-                <td>Dinner</td>-->
-              </tr>
-              <tr align="justify">
+                <td><label>Available Givers: </label></td>
                 
-                  
-                <td><label>Lunch</label></td>
-                <td>
-                  <label><input type="checkbox" name="11am"/>11AM - 12PM</label>
-                  <label><input type="checkbox" name="12pm"/>12PM - 1PM</label>
-                  <label><input type="checkbox" name="1pm"/>1PM - 2PM</label>
-                  <label><input type="checkbox" name="2pm"/>2PM - 3PM</label>
-                  <label><input type="checkbox" name="3pm"/>3PM - 4PM</label>
-                  <label><input type="checkbox" name="4pm"/>4PM - 5PM</label>
-                  </td>
-                  </tr>
-                <tr align="justify">
-                    <td><label>Dinner</label></td>
-                    <td>
-                  <label><input type="checkbox" name="5pm"/>5PM - 6PM</label>
-                  <label><input type="checkbox" name="6pm"/>6PM - 7PM</label>
-                  <label><input type="checkbox" name="7pm"/>7PM - 8PM</label>
-                  <label><input type="checkbox" name="8pm"/>8PM - 9PM</label>
-                  <label><input type="checkbox" name="9pm"/>9PM - 10PM</label>
-                  <label><input type="checkbox" name="10pm"/>10PM - 11PM</label>
-                  <label><input type="checkbox" name="11pm"/>11PM - 12AM</label>
-                  <label><input type="checkbox" name="12am"/>12AM - 1AM</label>
-                  </td>
-                
-              </tr>
-					    <tr>
-					      <td></td>
-					      <td>
-					        <input type="button" value="Submit Availability" />
-					      </td>
-					      <td></td>
 					     </tr>
 					     </tbody>
 					</table>
-            <!--<input type="radio" name="available"/>Yes
-            <input type="radio" name="available"/>No-->
+
             
           </div>
         </div>    
       </div>
-  </form>
-<!--  <div class="row">
-    <div class="col-md-12">
-      <div class="well">
-       <h3>Availability for </h3>
-      </div>
-    </div>    
-  </div>
-  <div class="row">
-    <div class="col-md-1">
-      <p>Sun</p>
-    </div>
-    <div class="col-md-2">
-      <p>Mon</p>
-    </div>
-    <div class="col-md-2">
-      <p>Tue</p>
-    </div>
-    <div class="col-md-2">
-      <p>Wed</p>
-    </div>
-    <div class="col-md-2">
-      <p>Thu</p>
-    </div>
-    <div class="col-md-2">
-      <p>Fri</p>
-    </div>
-    <div class="col-md-1">
-      <p>Sat</p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-1">
-      <p>1</p>
-    </div>
-    <div class="col-md-2">
-      <p>2</p>
-    </div>
-    <div class="col-md-2">
-      <p>3</p>
-    </div>
-    <div class="col-md-2">
-      <p>4</p>
-    </div>
-    <div class="col-md-2">
-      <p>5</p>
-    </div>
-    <div class="col-md-2">
-      <p>6</p>
-    </div>
-    <div class="col-md-1">
-      <p>7</p>
-    </div>
-  </div>
-   <div class="row">
-    <div class="col-md-1">
-      <p>8</p>
-    </div>
-    <div class="col-md-2">
-      <p>9</p>
-    </div>
-    <div class="col-md-2">
-      <p>10</p>
-    </div>
-    <div class="col-md-2">
-      <p>11</p>
-    </div>
-    <div class="col-md-2">
-      <p>12</p>
-    </div>
-    <div class="col-md-2">
-      <p>13</p>
-    </div>
-    <div class="col-md-1">
-      <p>14</p>
-    </div>
-  </div>
-   <div class="row">
-    <div class="col-md-1">
-      <p>15</p>
-    </div>
-    <div class="col-md-2">
-      <p>16</p>
-    </div>
-    <div class="col-md-2">
-      <p>17</p>
-    </div>
-    <div class="col-md-2">
-      <p>18</p>
-    </div>
-    <div class="col-md-2">
-      <p>19</p>
-    </div>
-    <div class="col-md-2">
-      <p>20</p>
-    </div>
-    <div class="col-md-1">
-      <p>21</p>
-    </div>
-  </div>
-   <div class="row">
-    <div class="col-md-1">
-      <p>22</p>
-    </div>
-    <div class="col-md-2">
-      <p>23</p>
-    </div>
-    <div class="col-md-2">
-      <p>24</p>
-    </div>
-    <div class="col-md-2">
-      <p>25</p>
-    </div>
-    <div class="col-md-2">
-      <p>26</p>
-    </div>
-    <div class="col-md-2">
-      <p>27</p>
-    </div>
-    <div class="col-md-1">
-      <p>28</p>
-    </div>
-  </div>
-   <div class="row">
-    <div class="col-md-1">
-      <p>29</p>
-    </div>
-    <div class="col-md-2">
-      <p>30</p>
-    </div>
-    
-  </div> -->
- 
-  <!--
-  <div class="row">
-    <div class="col-sm-3">
-      <div class="well">
-       <p>John</p>
-       <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
-      </div>
-    </div>
-    <div class="col-sm-9">
-      <div class="well">
-        <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-3">
-      <div class="well">
-       <p>Bo</p>
-       <img src="bandmember.jpg" class="img-circle" height="55" width="55" alt="Avatar">
-      </div>
-    </div>
-    <div class="col-sm-9">
-      <div class="well">
-        <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-3">
-      <div class="well">
-       <p>Jane</p>
-       <img src="bandmember.jpg" class="img-circle" height="55" width="55" alt="Avatar">
-      </div>
-    </div>
-    <div class="col-sm-9">
-      <div class="well">
-        <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-sm-3">
-      <div class="well">
-       <p>Anja</p>
-       <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
-      </div>
-    </div>
-    <div class="col-sm-9">
-      <div class="well">
-        <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
-      </div>
-    </div>
-  </div>-->
-</div>
 
-{% else %}
-<!-- taker -->
+</div>
 {% endif %}
 
 {% endblock %}
