--- a/templates/signup.html
+++ b/templates/signup.html
@@ -69,8 +69,8 @@
                     {% endif %}
                     
                     <p><select class="form-dropdown" name="usertype" id="usertype" placeholder="User Type"></p>
-                        <option value="g">User Type: Giver</option>
-                        <option value="r">User Type: Receiver</option>
+                        <option value="Giver">User Type: Giver</option>
+                        <option value="Receiver">User Type: Receiver</option>
                     </select>
                    
                     <br>
