--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app lang="en">
+<html lang="en" ng-app="App"><!-- socket -N8 -->
 <head>
   <title>NomNomNom</title>
    <link rel="shortcut icon" href="../static/img/header-bg.jpg">
@@ -11,8 +11,8 @@
   
   <!-- socket scripts -N8 -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-  <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.4/socket.io.js"></script> -->
-  <!--<script src="js/controller.js"></script> -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.4/socket.io.js"></script>
+  <script src="static/js/controller.js"></script>
   
   <style>
     /* Set black background color, white text and some padding */
@@ -90,6 +90,9 @@
 </head>
 <body>
 
+<div class="container" ng-controller="AppController"><!-- socket -N8 -->
+
+
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -104,16 +107,18 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home</a></li>
         <li><a href="#">Messages</a></li>
-        <li>Hello {{searchFor}} </li> <!-- socket testing -N8 -->
+        <!-- <li>Hello {{searchFor}} </li>  socket testing -N8 -->
       </ul>
-      <form class="navbar-form navbar-right" role="search">
+      <form class="navbar-form navbar-right" role="search" ng-submit="search()">
         <div class="form-group input-group">
-          <input type="text" ng-model="searchFor" class="form-control" placeholder="Search..">
-          <span class="input-group-btn">
-            <button class="btn btn-default" type="button">
-              <span class="glyphicon glyphicon-search"></span>
-            </button>
-          </span>
+          <!-- Socket -N8 -->
+          <!--<form ng-submit="search()">-->
+            <input type="text" ng-model="searchFor" class="form-control" placeholder="Search..">
+            <span class="input-group-btn">
+              <input class="btn btn-default" type="submit" ng-disabled="!searchFor" value="Search">
+            </span>
+          <!--</form>-->
+          
         </div>
       </form>
       <ul class="nav navbar-nav navbar-right">
@@ -234,7 +239,7 @@ function doalert(checkboxElem) {
   <p>Footer Text</p>
 </footer>
 
-
+</div><!-- socket -N8 -->
 </body>
 </html>
 
