--- a/templates/editpro.html
+++ b/templates/editpro.html
@@ -20,7 +20,7 @@
         <div class="col-md-12">
         <div class="well">  
             <h4>Edit Profile</h4>
-            <p>Edit edit of the following user information.</p>
+            <p>Edit any of the following user information.</p>
             <table style="width:100%">
               <tbody align="justify">
                 <form method="POST" action="/updateprofile">
@@ -29,8 +29,8 @@
                     <tr align="center"><td>Name: <input type="text" id="name" name="name"></td></tr>
                     <tr align="center"><td>New Password: <input type="password" id="newpassword" name="newpassword"></td></tr>
                     <tr align="center"><td>Confirm Password: <input type="password" id="confirmpassword" name="confirmpassword"></td></tr>
-                    <tr align="center"><td>User Type: <input type="radio" id="usertype" name="usertype" value="g"> Giver
-                                <input type="radio" id="usertype" name="usertype" value="r"> Receiver</td></tr>
+                    <tr align="center"><td>User Type: <input type="radio" id="usertype" name="usertype" value="Giver"> Giver
+                                <input type="radio" id="usertype" name="usertype" value="Receiver"> Receiver</td></tr>
                     <tr align="center"><td><input type="submit" value="Done Editing"/></td></tr>
                 </form>
 					   </tbody>
