searching for availability

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -213,6 +213,7 @@ function doalert(checkboxElem) {
     <div class="col-sm-2 well">
       <div class="thumbnail">
         <p><strong>Messages</strong></p>
+        <!--<p ng-repeat="res in found" ng-bind="res"></p>
         <p>Welcome</p>
         <p>Welcome</p>
         <p>Welcome</p>
@@ -222,8 +223,7 @@ function doalert(checkboxElem) {
         <p>Welcome</p>
         <p>Welcome</p>
         <p>Welcome</p>
-        <p>Welcome</p>
-        <p>Welcome</p>
+        <p>Welcome</p>-->
       </div>
       
       <div class="well">
