--- a/templates/newsFeed.html
+++ b/templates/newsFeed.html
@@ -19,6 +19,18 @@
 {% if userT[0] == 'Giver' %}
 <!-- giver -->
 
+<div class="row">
+        
+        <div class="col-md-12">
+        <div class="well">  
+          
+          <p ng-repeat="res in found2" ng-bind="res">Hey</p>
+      
+  
+</div>
+</div>
+</div>
+
       <div class="row">
         
         <div class="col-md-12">
