search results populate

--- a/templates/newsFeed.html
+++ b/templates/newsFeed.html
@@ -21,14 +21,11 @@
 
 <div class="row">
         
-        <div class="col-md-12">
-        <div class="well">  
-          
-          <p ng-repeat="res in found2" ng-bind="res">Hey</p>
-      
-  
-</div>
-</div>
+  <div class="col-md-12">
+    <div class="well">  
+      <p ng-repeat="res in found2" ng-bind="res"></p>
+    </div>
+  </div>
 </div>
 
       <div class="row">
@@ -72,6 +69,9 @@
               <tr align="justify">
                 <td><label>Available Givers: </label></td>
                 
+					     </tr>
+					     <tr>
+					       <td><p ng-repeat="res in found2" ng-bind="res"></p></td>
 					     </tr>
 					     </tbody>
 					</table>
