--- a/templates/newsFeed.html
+++ b/templates/newsFeed.html
@@ -67,7 +67,7 @@
           <!-- Request collapse -->
           <div id="collapse2" class="panel-collapse collapse">
             <div class="panel-body">Request Meal From: <b><p ng-bind="name"></p></b></div>
-            <div class="panel-body"><b><a data-toggle="collapse" href="#collapse2">Yes</a></b> or <a data-toggle="collapse" href="#collapse2">No</a></div>
+            <div class="panel-body"><b><a data-toggle="collapse" href="#collapse2" ng-click="sendReq()">Yes</a></b> or <a data-toggle="collapse" href="#collapse2">No</a></div>
             
           </div>
   
