trying to figure out search query display

--- a/templates/editpro.html
+++ b/templates/editpro.html
@@ -26,6 +26,7 @@
               <tbody align="justify">
                 <form method="POST" action="/updateprofile">
 
+                    <tr align="left">Upload Image: <input type="file" name="pic" accept="image/*"></tr>
                     <tr align="left">{{message}}</tr>
                     <tr align="left"><td>Username: <input type="text" id="username" name="username" size=63%></td></tr>
                     <tr align="left"><td>Name: <input type="text" id="name" name="name" size=63%></></td></tr>
