--- a/templates/newsFeed.html
+++ b/templates/newsFeed.html
@@ -106,6 +106,32 @@
           </div>
         </div>    
       </div>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="well">
+            <table>
+              <tbody>
+                <tr ng-repeat="res in found2" >
+                  <td><a data-toggle="collapse" href="#collapse2" ng-click="request(res)" ng-bind="res.name"></a> is available for</td>
+                  <td ng-bind="res.mealType"></td>
+                  <td>from</td>
+                  <td ng-bind="res.timeOne"></td>
+                  <td>-</td>
+                  <td ng-bind="res.timeTwo"></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+    
+          <!-- Request collapse -->
+          <div id="collapse2" class="panel-collapse collapse">
+            <div class="panel-body">Request Meal From: <b><p ng-bind="name"></p></b></div>
+            <div class="panel-body"><b><a data-toggle="collapse" href="#collapse2" ng-click="sendReq()">Yes</a></b> or <a data-toggle="collapse" href="#collapse2">No</a></div>
+            
+          </div>
+  
+        </div>
+      </div>
 
 </div>
 {% endif %}
