Pre merge commit

--- a/templates/newsFeed.html
+++ b/templates/newsFeed.html
@@ -37,9 +37,10 @@
                 {% for dinner in dinner %}
                     <tr align="center"><td>Dinner: {{dinner['starttime']}} - {{dinner['endtime']}}</td></tr>
                 {% endfor %}
-                <tr align="center"><td><a href="/editavailability">Edit Available</a> </td></tr>
+                </td></tr>
 					   </tbody>
 					</table>
+					<a href="/editavailability">Edit Available</a>
 
           </div>
         </div>    
