--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -86,6 +86,45 @@
       border-style: solid;
       border-color: red;
     }
+    footer {
+      padding: 25px 0;
+      text-align: center;
+    }
+    footer span.copyright {
+      line-height: 40px;
+      font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      text-transform: uppercase;
+      text-transform: none;
+    }
+    footer ul.quicklinks {
+      margin-bottom: 0;
+      line-height: 40px;
+      font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      text-transform: uppercase;
+      text-transform: none;
+    }
+    ul.social-buttons {
+      margin-bottom: 0;
+    }
+    ul.social-buttons li a {
+      display: block;
+      background-color: #222222;
+      height: 40px;
+      width: 40px;
+      border-radius: 100%;
+      font-size: 20px;
+      line-height: 40px;
+      color: white;
+      outline: none;
+      -webkit-transition: all 0.3s;
+      -moz-transition: all 0.3s;
+      transition: all 0.3s;
+    }
+    ul.social-buttons li a:hover,
+    ul.social-buttons li a:focus,
+    ul.social-buttons li a:active {
+      background-color: #fed136;
+    }
   </style>
 </head>
 <body>
@@ -193,7 +232,31 @@ function doalert(checkboxElem) {
 </div>
 
 <footer class="container-fluid text-center">
-  <p>Footer Text</p>
+   <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="copyright">Copyright &copy; Feed-a-Friend</span>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline social-buttons">
+                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li><a href="#">Privacy Policy</a>
+                        </li>
+                        <li><a href="#">Terms of Use</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 </footer>
 
 </div><!-- socket -N8 -->
