--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -14,13 +14,20 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.4/socket.io.js"></script>
   <script src="static/js/controller.js"></script>
   
+
+  <link href="../static/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  
   <style>
     /* Set black background color, white text and some padding */
     footer {
       background-color: #555;
       color: white;
       padding: 15px;
-    }.switch {
+    }a .btn{
+      
+    }
+    
+    .switch {
     position: relative;
     display: inline-block;
     width: 60px;
@@ -125,9 +132,17 @@
     ul.social-buttons li a:active {
       background-color: #fed136;
     }
+    .btn:focus,
+    .btn:active,
+    .btn.active,
+    .btn:active:focus {
+      outline: none;
+    }
   </style>
 </head>
 <body>
+  
+  
 
 <div class="container" ng-controller="AppController"><!-- socket -N8 -->
   <nav class="navbar navbar-inverse">
@@ -138,7 +153,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/home">Feed A Friend</a>
+        <a class="navbar-brand" href="/home" style="color: #fed136">Feed-a-Friend</a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
@@ -186,9 +201,7 @@
           <p><strong>Ey!</strong></p>
             People are looking at your profile. Find out who.
         </div>
-        <p><a href="#">Link</a></p>
-        <p><a href="#">Link</a></p>
-        <p><a href="#">Link</a></p>
+        <p><a class="btn" href="https://eagleone-sp.blackboard.com/eAccounts/AnonymousHome.aspx?ReturnUrl=%2feaccounts%2fAccountSummary.aspx%3fmenu%3d0&menu=0">Check Your Swipes!</a></p>
       </div>
       <div class="col-sm-7">
     
@@ -246,16 +259,16 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">Privacy Policy</a>
+                        <li><a href="#" style="color: #fed136">Privacy Policy</a>
                         </li>
-                        <li><a href="#">Terms of Use</a>
+                        <li><a href="#" style="color: #fed136">Terms of Use</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
 </footer>
-  </div><!-- socket -N8 -->
+</div><!-- socket -N8 -->
 
 </body>
 </html>
